Ensure MainFrame is the first processed frame on page load

The initial processing when both PageLoaded and main frame
available callbacks are received.
This CL ensures that the processing is done on the second
of these two events.
If another frame is available before this, its processing
is delayed).

Bug: 892129
Change-Id: I1291f923d7f9cbd757b7b9edcf2360f83fb56fd7
Reviewed-on: https://chromium-review.googlesource.com/c/1268337
Commit-Queue: Olivier Robin <olivierrobin@chromium.org>
Reviewed-by: Moe Ahmadi <mahmadi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598259}
Former-commit-id: abba9cbdc6930c8e7f230906d4b894e11dc699cc